# automatic_vehicle_number_plate_recognition

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py  utils.py
views/: export_video.py  home.py  license_plate_recognition.py
